# stock-forecast-app-backend

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  utils.py
app/: inference.py  main.py  utils.py
app/models/: __init__.py  lstm.py  registry.py
app/static/: index.html  script.js  styles.css
models/lstm/latest/: config.json  model.pt  scaler.pkl
scripts/: fetch_moex.py  split_dataset.py  train_lstm.py
